# akadressen-upload

./: .gitignore  .pre-commit-config.yaml  README.rst  main.py  pyproject.toml
uploader/: __init__.py  _settings.py  _uploader.py
